refactor other states conflicts